--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-559.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇸🇬 新加坡-256.9KB/s(Youtube:不良林), server: 217.197.160.117, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇻🇳 越南-984.9KB/s(Youtube:不良林), server: 103.173.255.127, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
   - {name: 🇨🇳 中国-517.9KB/s(Youtube:不良林), server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-385.1KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: 14.152.92.75, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2, server: 14.152.92.75, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林) 3, server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3, server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-559.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-984.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-559.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-984.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-559.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-984.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-559.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-984.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-559.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-984.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-559.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-984.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-559.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-984.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
