--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇬🇧 英国-380.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.232, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇦 加拿大-1.69MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇭🇰 香港-1.93MB/s(Youtube:不良林), server: hkt.52147.top, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, sni: hkt.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-629.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: 14.152.92.80, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 14.152.92.74, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2, server: 42.157.195.238, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇰🇷 韩国-3.82MB/s(Youtube:不良林), server: 13.124.190.68, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-402.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-11.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-392.1KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-772.2KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: 178.157.62.49, port: 50500, type: trojan, password: c5d997fe-cde6-463c-a671-a296b47289a6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-380.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-380.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-380.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-380.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-380.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-380.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-380.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
