--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-3.82MB/s(Youtube:不良林), server: 13.124.190.68, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-402.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇦 加拿大-501.3KB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-927.4KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-11.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-392.1KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
   - {name: 🇺🇸 美国-772.2KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
